--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css\search.css" />
   <link rel="stylesheet" href="css\news-city.css" />
   <link rel="stylesheet" href="css\footer.css" />
+  <link rel="stylesheet" href="css\breakpoint.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <title>Booki</title>
@@ -27,7 +28,7 @@
   </header>
   <main>
     <section id="search">
-      <h1>Trouvez votre hébergement pour des vancances de rêve</h1>
+      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
       <p>En plein centre ville ou en pleine nature</p>
       <label for="site-search"></label>
       <i class="fas fa-map-marker-alt"></i><input type="search" id="site-search" name="q" placeholder="Marseille, France" aria-label="Recherche hotel" /></i><button>Rechercher</button>
@@ -128,9 +129,6 @@
             <i class="fas fa-star"></i>
           </div>
         </div>
-      </div>
-      <div class="more">
-        <a href="#">Afficher plus</a>
       </div>
       </section>
       <aside id="popular">
